--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -15,9 +15,22 @@ jobs:
         uses: actions/checkout@v2
       - name: Check Node v
         run: node -v
+      # 캐쉬 작업 추가(이전에 dependency를 설치했다면 캐시를 이용하도록
+      - name: Cache node modules
+        id: node-cache
+        uses: actions/cache@v2
+        env: 
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
       # 직업폴더를 설정 한 수 의존 파일을 설치한다.
       - name: Install Dependencies
+        if: steps.node-cache.outputs.cache-hit != 'true'
         working-directory: .
+        # --frozen-lockfile는 install 시 yarn.lock파일 생성 X, 업데이트 필요 시 실패
         run: yarn install --frozen-lockfile
       # Build한다
       - name: Build # Fastify Build and Start
