--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3-rc.0",
     "npm": "^8.0.0",
     "webpack-cli": "^4.9.0"
   },
