--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
+    "dev": "webpack --config ./webpack.config.js --mode development",
+    "build": "webpack --config ./webpack.config.js --mode production",
     "app": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,18 +19,23 @@
   },
   "homepage": "https://github.com/hyejungg/cicd_test#readme",
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.7",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cardinal": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
-    "mysql2": "^2.3.3-rc.0",
+    "mysql2": "^2.3.0",
     "npm": "^8.0.0",
     "webpack-cli": "^4.9.0"
   },
   "devDependencies": {
-    "webpack": "^5.58.1"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.64.2"
   }
 }
