[fix] ci start 명령 추가
bcrypt 모듈을 제외시키고 빌드를 하면 빌드 자체에선 문제가 안되지만, webpack으로 압축한 build.js 파일을 실행하지 못하는 문제 발생 -> js에 최적화된 bcyptjs 모듈로 변경하여 해당 문제 해결
기존에 생성한 bable 모듈로 인해 최신 버전으로 언어를 변환하여 export 를 사용하지 못하는 문제 발생 -> bable 모듈 삭제
webpack에서 env 파일에 접근하여 환경변수 적용할 수 있도록 환경변수 설정 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
-    "app": "echo \"Error: no test specified\" && exit 1"
+    "app": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/build.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
   "homepage": "https://github.com/hyejungg/cicd_test#readme",
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.7",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cardinal": "^2.1.1",
     "cors": "^2.8.5",
@@ -33,9 +34,7 @@
     "webpack-cli": "^4.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "webpack": "^5.64.2"
   }
 }
