--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cardinal": "^2.1.1",
+    "clean-webpack-plugin": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -31,10 +32,7 @@
     "firebase-admin": "^9.12.0",
     "mysql2": "^2.3.0",
     "npm": "^8.0.0",
+    "webpack": "^5.64.2",
     "webpack-cli": "^4.9.0"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "webpack": "^5.64.2"
   }
 }
