--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "npm": "^8.0.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
   }
