--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -4,7 +4,10 @@
 name: ServerCICD
 on:
   push:
-    branches: main
+  pull_request:
+    branches: 
+      - main
+      - dev
 jobs:
   build:
     runs-on: ubuntu-latest
