--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "passport-local": "^1.0.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
+  },
+  "devDependencies": {
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
