--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production",
+    "dev": "webpack-cli --config ./webpack.config.js --mode development",
+    "build": "webpack-cli --config ./webpack.config.js --mode production",
     "app": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/build.js"
   },
