--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -19,18 +19,18 @@ jobs:
       - name: Check Node v
         run: node -v
       # 캐시 작업 추가(이전에 dependency를 설치했다면 캐시를 이용하도록
-      - name: Cache node modules
-        id: node-cache
-        uses: actions/cache@v2
-        env: 
-          cache-name: cache-node-modules
-        with:
-          path: ~./npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+#       - name: Cache node modules
+#         id: node-cache
+#         uses: actions/cache@v2
+#         env: 
+#           cache-name: cache-node-modules
+#         with:
+#           path: ~./npm
+#           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-build-${{ env.cache-name }}-
+#             ${{ runner.os }}-build-
+#             ${{ runner.os }}-
       # 직업폴더를 설정 한 수 의존 파일을 설치한다.
       - name: Install Dependencies
         if: steps.node-cache.outputs.cache-hit != 'true'
