[feat] ESLint, Prettier 파일 추가 및 사용하지 않는 dependencies 삭제
- ESLint 라고 하는 소스코드 단위 정적 분석 도구를 이용하여 문법 규칙, compiler error 를 잡음
- Prettier를 사용하여 ESLint로는 잡지 못하는 코드 포맷팅을 진행
- package.json에서 사용하지 않는 의존 파일 삭제
  - `cors`, `@mapbox/node-pre-gyp` 사용 안함
  -  `cardinal` mysql2에 helper 안에 있는 필요 파일 같은데 없어도 동작 가능
  - pm2 는 앱에 대한 의존 파일이기 보다는 개발 시 필요한 파일이라 생각되어 devDependencies로 위치 옮김

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "lint": "eslint .",
     "dev": "webpack --config ./webpack.config.js --mode development",
     "build": "webpack --config ./webpack.config.js --mode production",
     "app": "echo \"Error: no test specified\" && exit 1",
@@ -20,12 +21,9 @@
   },
   "homepage": "https://github.com/hyeeyoung/wishboard-server#readme",
   "dependencies": {
-    "@mapbox/node-pre-gyp": "^1.0.7",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "cardinal": "^2.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -37,11 +35,16 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pm2": "^5.1.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "pm2": "^5.1.2",
+    "prettier": "2.5.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
