--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "app.js",
   "scripts": {
     "lint": "eslint .",
-    "dev": "webpack --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production",
-    "app": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/build.js"
+    "build": "webpack --config ./webpack.config.js --mode development",
+    "build:production": "webpack --config ./webpack.config.js --mode production",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,9 +24,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "firebase-admin": "^9.12.0",
+    "firebase-admin": "^10.0.2",
+    "helmet": "^5.0.2",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
