--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -61,14 +61,18 @@ jobs:
         run: npm run lint
         
         # CI 통과 시 build하여 server.js 파일 생성
-      - name: run build (dev)
+      - name: run build (main <- dev)
         if: ${{ github.ref == 'refs/heads/dev' }} 
-        run: npm run build --if-present
-        
-      - name: run build (main)
-        if: ${{ github.ref == 'refs/heads/main' }} 
         run: npm run build:production --if-present
         
+      - name: run build (dev <- *)
+        run: npm run build --if-present
+
+
+#   deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:  
       #CD
       # build 파일을 ec2에 올리기
 #       - name: build file upload to ec2 
