--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
+    "node-schedule": "^2.1.0",
     "npm": "^8.0.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
