--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2",
     "npm": "^8.0.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
