--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -27,30 +27,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Check Npm -v
-        run: npm -v   
-      # 캐시 작업 추가(이전에 dependency를 설치했다면 캐시를 이용하도록
-#       - name: Cache node modules
-#         id: node-cache
-#         uses: actions/cache@v2
-#         env: 
-#           cache-name: cache-node-modules
-#         with:
-#           path: ~./npm
-#           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-#           restore-keys: |
-#             ${{ runner.os }}-build-${{ env.cache-name }}-
-#             ${{ runner.os }}-build-
-#             ${{ runner.os }}-
-      # 직업폴더를 설정 한 수 의존 파일을 설치한다.
-#       - name: Install Dependencies
-#         if: steps.node-cache.outputs.cache-hit != 'true'
-#         working-directory: .
-#         # --frozen-lockfile는 install 시 yarn.lock파일 생성 X, 업데이트 필요 시 실패
-#         run: yarn install --frozen-lockfile
-#       # Build한다
-#       - name: Build # Fastify Build and Start
-#         working-directory: .
-#         run: yarn run build
+        run: npm -v 
 
         # npm ci를 통해 npm install 진행
       - name: npm CI
@@ -62,7 +39,7 @@ jobs:
         
         # CI 통과 시 build하여 server.js 파일 생성
       - name: run build (main <- dev)
-        if: ${{ github.ref == 'refs/heads/dev' }} 
+        if: ${{ github.ref == 'refs/heads/main' }} 
         run: npm run build:production --if-present
         
       - name: run build (dev <- *)
