--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x] # 개발환경과 동일하게 맞춤
+        node-version: [16.13.2] # 개발환경과 동일하게 맞춤
         
     steps:
       # 브랜치에 checkout해 코드를 가져온다
