--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -73,7 +73,9 @@ jobs:
         run: npm run build:production --if-present
         
       - name: run build (dev <- *)
-        run: npm run build --if-present
+        run: |
+          npm run build --if-present
+          pwd 
 
 
 #   deploy:
