--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -63,19 +63,18 @@ jobs:
           echo WISHBOARD_GMAIL_PW=${{ secrets.WISHBOARD_GMAIL_PW }} >> .env
           
           echo JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} >> .env
-
-          cat .env
-          pwd
         
         # CI 통과 시 build하여 server.js 파일 생성
       - name: run build (main <- dev)
         if: ${{ github.ref == 'refs/heads/main' }} 
-        run: npm run build:production --if-present
+        run: |
+          echo NODE_ENV=production >> .env
+          npm run build:production --if-present
         
       - name: run build (dev <- *)
         run: |
+          echo NODE_ENV=development >> .env
           npm run build --if-present
-          pwd 
 
 
 #   deploy:
