--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -30,11 +30,11 @@ jobs:
         run: npm -v 
 
         # npm ci를 통해 npm install 진행
-      - name: npm CI
+      - name: Npm CI
         run: npm ci
         
         #lint 통과 확인
-      - name: check ESLint
+      - name: Check ESLint
         run: npm run lint
       
         # .env 파일 생성
@@ -65,13 +65,13 @@ jobs:
           echo JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} >> .env
         
         # CI 통과 시 build하여 server.js 파일 생성
-      - name: run build (main <- dev)
+      - name: Run build (main <- dev)
         if: ${{ github.ref == 'refs/heads/main' }} 
         run: |
           echo NODE_ENV=production >> .env
           npm run build:production --if-present
         
-      - name: run build (dev <- *)
+      - name: Run build (dev <- *)
         run: |
           echo NODE_ENV=development >> .env
           npm run build --if-present
@@ -81,8 +81,8 @@ jobs:
 #     needs: build
 #     runs-on: ubuntu-latest
 #     steps:  
-      #CD
-      # build 파일을 ec2에 올리기
+#       CD
+#       build 파일을 ec2에 올리기
 #       - name: build file upload to ec2 
 #         uses: garygrossgarten/github-action-scp@release
 #         with:
