--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -76,11 +76,31 @@ jobs:
           echo NODE_ENV=development >> .env
           npm run build --if-present
 
+      - name: Sharing files between jobs.
+        uses: actions/upload-artifact@v1
+        with:
+          name: dist
+          path: ./dist
 
-#   deploy:
-#     needs: build
-#     runs-on: ubuntu-latest
-#     steps:  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:  
+      # build job에서 빌드한 파일(./dist/server.js) 가져오기
+      - name: Download math result for job 1
+        uses: actions/download-artifact@v1
+        with:
+          name: dist
+      # aws s3에 빌드 파일 저장
+      - name : Build file upload to EC2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            dist s3://wishboard-server-build
 #       CD
 #       build 파일을 ec2에 올리기
 #       - name: build file upload to ec2 
