--- a/.github/workflows/serverCI.yml
+++ b/.github/workflows/serverCI.yml
@@ -87,12 +87,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:  
       # build job에서 빌드한 파일(./dist/server.js) 가져오기
-      - name: Download math result for job 1
+      - name: Sharing files between jobs.
         uses: actions/download-artifact@v1
         with:
           name: dist
       # aws s3에 빌드 파일 저장
-      - name : Build file upload to EC2
+      # ** 파일 이름이 동일해서 알아서 덮임
+      - name : Build file upload to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -101,22 +102,15 @@ jobs:
             --recursive \
             --region ap-northeast-2 \
             dist s3://wishboard-server-build
-#       CD
-#       build 파일을 ec2에 올리기
-#       - name: build file upload to ec2 
-#         uses: garygrossgarten/github-action-scp@release
-#         with:
-#             local: ./dist
-#             remote: /home/ubuntu/server-wishboard/dist/
-#             host: ${{ secrets.REMOTE_IP }}
-#             username: ${{ secrets.REMOTE_SSH_ID }}
-#             privateKey: ${{ secrets.REMOTE_SSH_PK }}
-#             port: ${{ secrets.REMOTE_SSH_PORT }}
-#             recursive: true
-#       - name: ec2 update
-#         uses: appleboy/ssh-action@master
-#         with:
-#            host: ${{ secrets.REMOTE_IP }}
-#            username: ${{ secrets.REMOTE_SSH_ID }}
-#            key: ${{ secrets.REMOTE_SSH_PK }}
-#            script: pm2 restart 0 --update-env
+      # aws ec2에 접속
+      - name : Connect and Build file download to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.AWS_EC2_SSH_KEY }}
+          host: ${{ secrets.AWS_HOST }}
+          username: ${{ secrets.AWS_USRENAME }}
+          script: |
+            pwd
+            cd ./wishboard-server-product
+            aws s3 cp s3://wishboard-server-build ./dist --recursive 
+        # ** pm2로 실행 시키는 부분 추가 **
