[feat] pm2 배포 스크립트 추가 및 CD 프로세스 수정

--- a/.github/workflows/serverCICD.yml
+++ b/.github/workflows/serverCICD.yml
@@ -68,13 +68,17 @@ jobs:
       - name: Run build (main <- dev)
         if: ${{ github.ref == 'refs/heads/main' }} 
         run: |
-          echo NODE_ENV=production >> .env
           npm run build:production --if-present
         
       - name: Run build (dev <- *)
         run: |
-          echo NODE_ENV=development >> .env
           npm run build --if-present
+
+      - name: Copy ecosystem.config.js
+        run: |
+          cp ./ecosystem.config.js ./dist
+          ls 
+          ls ./dist
 
       - name: Sharing files between jobs.
         uses: actions/upload-artifact@v1
@@ -93,7 +97,7 @@ jobs:
           name: dist
       # aws s3에 빌드 파일 저장
       # ** 파일 이름이 동일해서 알아서 덮임
-      - name : Build file upload to S3
+      - name : Build file upload to S3 and PM2 script
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -103,7 +107,7 @@ jobs:
             --region ap-northeast-2 \
             dist s3://wishboard-server-build
       # aws ec2에 접속
-      - name : Connect and Build file download to EC2
+      - name : Connect and Build file download to EC2 and PM2 script
         uses: appleboy/ssh-action@master
         with:
           key: ${{ secrets.AWS_EC2_SSH_KEY }}
