[chore] s3에서 업로드 및 pm2 reload 명령을 쉘스크립트 실행으로 변경

--- a/.github/workflows/serverCICD.yml
+++ b/.github/workflows/serverCICD.yml
@@ -115,8 +115,5 @@ jobs:
       #     script: |
       #       pwd
       #       cd ./wishboard-server-product
-      #       aws s3 cp s3://wishboard-server-build ./dist --recursive 
-      #       cd dist
-      #       pm2 reload ecosystem.config.js
-      #       exit 
+      #       ./pm2-deploy.sh
         
