--- a/.github/workflows/serverCICD.yml
+++ b/.github/workflows/serverCICD.yml
@@ -57,10 +57,12 @@ jobs:
       - name: Run build (main <- dev)
         if: ${{ github.ref == 'refs/heads/main' }} 
         run: |
+          echo NODE_ENV="production" >> .env
           npm run build:production --if-present
         
       - name: Run build (dev <- *)
         run: |
+          echo NODE_ENV="development" >> .env
           npm run build --if-present
 
       - name: Copy ecosystem.config.js
