--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/hyeeyoung/wishboard-server#readme",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.1.0",
