--- a/.github/workflows/serverCICD.yml
+++ b/.github/workflows/serverCICD.yml
@@ -4,6 +4,8 @@
 name: ServerCICD
 on:
   push:
+    branches: 
+      - dev
   pull_request:
     branches: 
       - main
@@ -56,17 +58,16 @@ jobs:
           echo SLACK_API_TOKEN=${{ secrets.SLACK_API_TOKEN }} >> .env
         
         # CI 통과 시 build하여 server.js 파일 생성
-      - name: Run build (main <- dev)
-        if: ${{ github.ref == 'refs/heads/main' }} 
-        run: |
-          echo NODE_ENV="production" >> .env
-          npm run build:production --if-present
-        
-      - name: Run build (dev <- *)
-        if: ${{ github.ref == 'refs/heads/dev }} 
+      - name: Run build
         run: |
           echo NODE_ENV="development" >> .env
           npm run build --if-present
+
+      - name: Run build (main)
+        if: ${{ github.base_ref == 'main' }} 
+        run: |
+          echo NODE_ENV="production" >> .env
+          npm run build:production --if-present 
 
       - name: Copy ecosystem.config.js
         run: |
