--- a/.github/workflows/serverCICD.yml
+++ b/.github/workflows/serverCICD.yml
@@ -57,12 +57,7 @@ jobs:
 
           echo SLACK_API_TOKEN=${{ secrets.SLACK_API_TOKEN }} >> .env
         
-        # CI 통과 시 build하여 server.js 파일 생성
-      - name: Run build
-        run: |
-          echo NODE_ENV="development" >> .env
-          npm run build --if-present
-
+        # main 브랜치에 대한 PR만 빌드하여 S3에 업로드
       - name: Run build (main)
         if: ${{ github.base_ref == 'main' }} 
         run: |
@@ -70,10 +65,12 @@ jobs:
           npm run build:production --if-present 
 
       - name: Copy ecosystem.config.js
+        if: ${{ github.base_ref == 'main' }} 
         run: |
           cp ./ecosystem.config.js ./dist
 
       - name: Sharing files between jobs.
+        if: ${{ github.base_ref == 'main' }} 
         uses: actions/upload-artifact@v1
         with:
           name: dist
@@ -81,6 +78,7 @@ jobs:
 
   deploy:
     needs: build
+    if: ${{ github.base_ref == 'main' }} 
     runs-on: ubuntu-latest
     steps:  
       # build job에서 빌드한 파일(./dist/server.js) 가져오기
