--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "app-root-path": "^3.0.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^5.0.2",
