--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-ipfilter": "^1.2.0",
+    "express-rate-limit": "^6.5.1",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
