--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/hyeeyoung/wishboard-server#readme",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "aws-sdk": "^2.1145.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.10",
@@ -32,6 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
