--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "lint": "eslint .",
-    "build": "webpack --config ./webpack.config.js --mode development",
-    "build:production": "webpack --config ./webpack.config.js --mode production",
-    "start": "node dist/server.js"
+    "build": "webpack --config ./webpack.config.js --mode=development",
+    "build:production": "webpack --config ./webpack.prod.config.js --mode=production",
+    "start": "npm run build && pm2 reload dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pm2": "^5.2.0",
     "winston": "^3.5.1",
     "winston-daily-rotate-file": "^4.5.5"
   },
