--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "build": "webpack --config ./webpack.config.js --mode=development",
     "build:production": "webpack --config ./webpack.prod.config.js --mode=production",
-    "start": "npm run build && pm2 reload dist/server.js"
+    "heroku-postbuild": "npm run build",
+    "start": "pm2 reload dist/server.js"
   },
   "repository": {
     "type": "git",
