--- a/.github/workflows/developDeploy.yml
+++ b/.github/workflows/developDeploy.yml
@@ -2,10 +2,10 @@ name: Server Production Server CI&CD Work Flow
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
-  prod_CICD:
+  devlop_CICD:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -58,19 +58,29 @@ jobs:
         # 빌드하여 S3에 업로드
       - name: Run build (main)
         run: |
-          npm run build:production --if-present
+          npm run build --if-present
 
       - name: Copy ecosystem.config.js
         run: |
           cp ./ecosystem.config.js ./dist
 
         # S3에 빌드 파일 저장
-      - name: Build file upload to S3 and PM2 script
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws s3 cp \
-            --recursive \
-            --region ap-northeast-2 \
-            dist s3://wishboard-server-build
+      - name: zip file
+        run: zip -r wishboard-dev.zip ./dist ./ecosystem.config.js ./scripts ./appspec.yml
+
+      - name: AWS configure credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_DEPLOY_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_DEPLOY_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./wishboard-dev.zip s3://wishboard-dev-build/deploy/
+
+      - name: deploy with AWS codeDeploy
+        run: aws deploy create-deployment
+          --application-name wishboard-dev-codedeploy
+          --deployment-config-name CodeDeployDefault.OneAtATime
+          --deployment-group-name GROUP
+          --s3-location bucket=wishboard-dev-build,bundleType=zip,key=deploy/wishboard-dev.zip
