--- a/.github/workflows/prCheck.yml
+++ b/.github/workflows/prCheck.yml
@@ -1,15 +1,12 @@
 name: Server PR Check Work Flow
 on:
-  push:
-    branches:
-      - dev
   pull_request:
     branches:
       - main
       - dev
 
 jobs:
-  CICD:
+  PR_Check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
