--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-rate-limit": "^6.5.1",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
+    "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
@@ -38,9 +39,6 @@
     "mysql2": "^2.3.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "winston": "^3.5.1",
     "winston-daily-rotate-file": "^4.5.5"
   },
