--- a/.github/workflows/developDeploy.yml
+++ b/.github/workflows/developDeploy.yml
@@ -43,6 +43,8 @@ jobs:
           echo DB_DEV_PASSWORD=${{ secrets.DB_DEV_PASSWORD }} >> .env
           echo DB_DEV_NAME=${{ secrets.DB_DEV_NAME }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo REDIS_HOST=${{ secrets.REDIS_HOST }} >> .env
+          echo REDIS_PORT=${{ secrets.REDIS_PORT }} >> .env
 
           echo WISHBOARD_GMAIL_ID=${{ secrets.WISHBOARD_GMAIL_ID }} >> .env
           echo WISHBOARD_GMAIL_PW=${{ secrets.WISHBOARD_GMAIL_PW }} >> .env
