[mod] redis 패스워드 설정 추가

--- a/.github/workflows/developDeploy.yml
+++ b/.github/workflows/developDeploy.yml
@@ -45,6 +45,7 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           echo REDIS_HOST=${{ secrets.REDIS_HOST }} >> .env
           echo REDIS_PORT=${{ secrets.REDIS_PORT }} >> .env
+          echo REDIS_DEV_PASSWORD=${{ secrets.REDIS_DEV_PASSWORD }} >> .env
 
           echo WISHBOARD_GMAIL_ID=${{ secrets.WISHBOARD_GMAIL_ID }} >> .env
           echo WISHBOARD_GMAIL_PW=${{ secrets.WISHBOARD_GMAIL_PW }} >> .env
