--- a/.github/workflows/productDeploy.yml
+++ b/.github/workflows/productDeploy.yml
@@ -76,4 +76,4 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            dist s3://wishboard-server-build
+            dist s3://wishboard-prod-build
