[mod] [mod] 서버 계정 이전으로 인한 redis prod/dev 환경변수 변경

--- a/.github/workflows/prCheck.yml
+++ b/.github/workflows/prCheck.yml
@@ -44,8 +44,8 @@ jobs:
           echo DB_PASSWORD=${{ secrets.DB_DEV_PASSWORD }} >> .env
           echo DB_NAME=${{ secrets.DB_DEV_NAME }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          echo REDIS_HOST=${{ secrets.REDIS_HOST }} >> .env
-          echo REDIS_PORT=${{ secrets.REDIS_PORT }} >> .env
+          echo REDIS_DEV_HOST=${{ secrets.REDIS_DEV_HOST }} >> .env
+          echo REDIS_PORT=${{ secrets.REDIS_PORT }} >> .envx
           echo REDIS_DEV_PASSWORD=${{ secrets.REDIS_DEV_PASSWORD }} >> .env
 
           echo WISHBOARD_GMAIL_ID=${{ secrets.WISHBOARD_GMAIL_ID }} >> .env
